<resources>
    <string name="app_name">NoteBook</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="edit_note">Edit Note</string>
    <string name="send_as_email_title">Send as Email</string>
    <string name="menu_cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <string name="nav_share_message">Don\'t you think you have shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">Setting</string>

    <!-- Preference Titles -->
    <string name="user_detail_header">User Information</string>
    <string name="fav_social_header">Share</string>

    <!-- Messages Preferences -->
    <string name="name_title">Display name</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_display_email">Email address</string>
    <string name="next">Next</string>
</resources>
