<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notebook.NoteActivity">
    <item
            android:id="@+id/action_next_note"
            android:icon="@android:drawable/ic_media_next"
            android:orderInCategory="100"
            android:title="@string/next"
            android:visible="false"
            app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="101"
        android:title="@string/send_as_email_title"
        app:showAsAction="never" />
    <item
            android:id="@+id/action_cancel"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/menu_cancel"
            app:showAsAction="ifRoom|withText" />
</menu>
